fix image overlap content

--- a/css/master.css
+++ b/css/master.css
@@ -33,11 +33,8 @@
     width: 86.5% !important; }
 
   .center .content {
-    padding: 0px 0 0 130px !important;
-    margin-top: -106px; }
-
-  sub {
-    margin-bottom: 10px; } }
+    padding: 0px 0 0 40% !important;
+    margin-top: -106px; } }
 h1 {
   font-weight: 400;
   color: #454545; }
