--- a/scss/abstracts/_media.scss
+++ b/scss/abstracts/_media.scss
@@ -43,12 +43,8 @@
   }
 
   .center .content {
-    padding: 0px 0 0 130px !important;
+    padding: 0px 0 0 40% !important;
     margin-top: -106px;
-  }
-
-  sub {
-    margin-bottom: 10px
   }
 
 }
